--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -246,12 +246,13 @@
     <Content Include="Content\Cart.css" />
     <Content Include="Content\Custome.css" />
     <Content Include="Content\DeliveryStaff.css" />
-    <Content Include="Content\Diamonds\AddDiamond.css" />
     <Content Include="Content\Diamonds\Diamonds.css" />
     <Content Include="Content\Diamonds\ViewDiamond.css" />
     <Content Include="Content\EditProfile.css" />
     <Content Include="Content\ForgotPassword.css" />
     <Content Include="Content\HomePage.css" />
+    <Content Include="Content\Icons\diamond %281%29.png" />
+    <Content Include="Content\Icons\diamond.png" />
     <Content Include="Content\Introduce\Baguette.css" />
     <Content Include="Content\Introduce\Cushion.css" />
     <Content Include="Content\Introduce\Emerald.css" />
@@ -264,6 +265,7 @@
     <Content Include="Content\Introduce\Round.css" />
     <Content Include="Content\Introduce\Trillion.css" />
     <Content Include="Content\LoginPage.css" />
+    <Content Include="Content\Manager\Site.css" />
     <Content Include="Content\noUiSlider\jquery.nouislider.css" />
     <Content Include="Content\Order\CreateOrder.css" />
     <Content Include="Content\ProductCss\StyleSheet1.css" />
