--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -268,6 +268,7 @@
     <Content Include="Content\Manager\Site.css" />
     <Content Include="Content\noUiSlider\jquery.nouislider.css" />
     <Content Include="Content\Order\CreateOrder.css" />
+    <Content Include="Content\Order\UpdateOrderDetails.css" />
     <Content Include="Content\ProductCss\StyleSheet1.css" />
     <Content Include="Content\SaleStaff.css" />
     <Content Include="Content\ViewOrder.css" />
