--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -502,18 +502,17 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Content\Introduce\Asscher.css" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\DeliveryStaffController.cs" />
     <Compile Include="Controllers\DiamondsController.cs" />
     <Compile Include="Controllers\ForgotPasswordController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IntroduceController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ManagerController.cs" />
     <Compile Include="Controllers\NotificationController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\SaleStaffController.cs" />
-    <Compile Include="Controllers\SignUpController.cs" />
     <Compile Include="Controllers\ViewProfileController.cs" />
     <Compile Include="Controllers\WarrantyController.cs" />
     <Compile Include="Global.asax.cs">
@@ -527,9 +526,6 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
-    <Content Include="Views\Login\LoginPage.cshtml">
-      <BrowseToURL>~/Login/index</BrowseToURL>
-    </Content>
     <Content Include="Views\Shared\_LayoutPage1.cshtml" />
     <Content Include="Views\Diamonds\Diamonds.cshtml">
       <BrowseToURL>~/diamonds/index</BrowseToURL>
@@ -567,6 +563,7 @@
     <Content Include="Views\Warranty\CustomerWarranties.cshtml" />
     <Content Include="Views\Manager\AddAccentStone.cshtml" />
     <Content Include="Views\Manager\AddSetting.cshtml" />
+    <Content Include="Views\Account\AccountPage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
