--- a/DiamondShopBOs/App.Config
+++ b/DiamondShopBOs/App.Config
@@ -15,7 +15,7 @@
 		</providers>
 	</entityFramework>
 	<connectionStrings>
-		<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\THINH;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
